# engineering-standards

./: .envrc  .gitattributes  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  AGENTS.md  CHANGELOG.md  README.md  flake.nix  renovate.json  treefmt.toml
.config/: filegen-manifest.json
.github/rules/: 03-documentation-style.md  04-logging.md
.github/workflows/: ansible-black.yml  ansible-lint.yml  ansible-test.yml  check-pre-commit-hooks.yml  ci.yml  claude-linter.yml  dart-ci.yml  dart-publish-pub.yml  dart-review-app.yml  general-add-to-project.yml  general-ai-review.yml  general-authenticate-commits.yml  general-checks.yml  general-release.yml  general-reuse.yml  general-update-openpgp-policy.yml  infra-docker-backend.yml  infra-docker-bake.yml  infra-docker.yml  infra-fast-forward.yml  infra-github-pages.yml  release.yml  renovate.yml  rust-ci.yml  rust-publish-crate.yml  rust-test.yml  sync-standards.yml
ai-rules/dart/: placeholder.mdc
ai-rules/flutter/: architecture.md  dart-standards.md  error-handling.md  feature-flags.md  patrol-tests.md  riverpod.md  (+2 more)
app/: .env.example  Cargo.toml  Dockerfile  build.rs  docker-compose.yml
app/migrations/: 001_initial.sql  002_nix_tracking.sql  003_sync_state.sql  004_cleanup_sync_era.sql  005_has_flake_lock.sql
app/src/: config.rs  error.rs  lib.rs  main.rs  module.rs  static_regex.rs
app/src/dashboard/: api.rs  auth.rs  middleware.rs  mod.rs  views.rs
app/src/db/: mod.rs  repositories.rs
app/src/github/: mod.rs  pr.rs
app/src/modules/: mod.rs
app/src/modules/flake/: detector.rs  mod.rs  updater.rs
app/src/modules/pin/: actions.rs  docker.rs  mod.rs
app/src/modules/review/: claude.rs  formatter.rs  handler.rs  mod.rs
app/src/modules/scope/: detector.rs  mod.rs
app/templates/: audit_log.html  layout.html  login.html  org_overview.html  repo_detail.html
docs/: README.md  adopting.md  github-app.md
e2e/: argocd.nix  default.nix  helm.nix
hooks/: base.yaml  dart.yaml  python.yaml  rust.yaml
nix/: action-versions-data.nix  app-package.nix  default.nix  lib.nix  reusable-workflows.nix  sdk-versions.nix  typos.toml
renovate/: dart.json  default.json  private.json
scripts/: generate-dependabot.sh  pin-actions.sh  pin-docker-digests.sh  rollout-sync-workflow.sh
standards/: allowed-github-actions.toml
(+177 files in other folders)
