[package]
name = "engineering-standards-app"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "engineering-standards-app"
path = "src/main.rs"

[dependencies]
async-trait = "0.1"
askama = "0.12"
axum = { version = "0.8", features = ["macros"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
hex = "0.4"
hmac = "0.12"
http = "1"
jsonwebtoken = "9"
octocrab = "0.41"
openidconnect = "4"
regex = "1"
reqwest = { version = "0.12", features = ["json"] }
secrecy = { version = "0.10", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
snafu = "0.8"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "migrate", "uuid", "chrono", "json"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "timeout", "catch-panic"] }
tower-sessions = "0.15"
tracing = "0.1"
tracing-error = "0.2"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }

[build-dependencies]
vergen = { version = "8", features = ["git", "gitcl", "build"] }

[lints.rust]
dead_code = "warn"
missing_docs = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
# unreachable_pub = "warn"  # TODO: enable and fix pub → pub(crate)
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_qualifications = "warn"
unsafe_code = "deny"

[lints.clippy]
cast_lossless = "warn"
checked_conversions = "warn"
cloned_instead_of_copied = "warn"
dbg_macro = "warn"
default_trait_access = "warn"
doc_markdown = "warn"
expect_used = "warn"
fallible_impl_from = "warn"
flat_map_option = "warn"
fn_params_excessive_bools = "warn"
implicit_clone = "warn"
inefficient_to_string = "warn"
large_futures = "warn"
manual_let_else = "warn"
map_unwrap_or = "warn"
needless_pass_by_value = "warn"
print_stderr = "warn"
print_stdout = "warn"
redundant_closure_for_method_calls = "warn"
semicolon_if_nothing_returned = "warn"
str_to_string = "warn"
todo = "warn"
unnested_or_patterns = "warn"
unreadable_literal = "warn"
unused_async = "warn"
unused_self = "warn"
unwrap_used = "warn"
wildcard_imports = "warn"
